pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-008-tabs.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/008-tabs.md
---

[33mfoo
[0m[33mbar
[0m
