pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-034-entity_and_numeric_character_references.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/034-entity_and_numeric_character_references.md
---

[33mfoo
[0m
